# spyrrow

./: .gitignore  Cargo.toml  README.md  pyproject.toml  spyrrow.pyi
.github/workflows/: CI.yml  sync_sparrow.yml
docs/: index.rst
scripts/: json_instance.py  sync_sparrow.py
src/: lib.rs  terminator.rs
tests/: test_basic.py  test_copy.py
