[package]
name = "spyrrow"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spyrrow"
crate-type = ["cdylib"]

[dependencies]
jagua-rs = { git = "https://github.com/JeroenGar/jagua-rs.git", rev="19291ebbddb07c380149130ce29c88146ef404cb", features = ["spp"]}
pyo3 = "0.24.0"
rand = { version = "0.9.0", features = ["small_rng"] }
sparrow = { git = "https://github.com/JeroenGar/sparrow.git",rev="18044e6f91c6e0894c62a1aaac8e3b50c0f13a5c",features = ["only_final_svg"] }
